--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<!-- Write your code here! -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>HTML Lab</title>
+  </head>
+  <body>
+    <h1>Welcome to HTML</h1>
+
+    <p>
+      This is a <strong>strong</strong> paragraph with
+      <em>emphasis</em> and a link to
+      <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+        MDN HTML Docs
+      </a>.
+    </p>
+
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+      </tr>
+      <tr>
+        <td>John</td>
+        <td>25</td>
+      </tr>
+    </table>
+  </body>
+</html>
